delete for add identity

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Interface\" />
     <Folder Include="Services\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
 
 </Project>
