--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Interface\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.7" />
+  </ItemGroup>
+
 </Project>
