--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MarketDbConnection": "Server=.;Database=Market_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
