--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\IOC\IOC.csproj" />
   </ItemGroup>
 
 </Project>
