--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\IOC\IOC.csproj" />
+    <ProjectReference Include="..\TranslatePersian\TranslatePersian.csproj" />
   </ItemGroup>
 
 </Project>
