--- a/TranslatePersian/TranslatePersian.csproj
+++ b/TranslatePersian/TranslatePersian.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.9" />
   </ItemGroup>
 
 </Project>
