add google login

--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "googleapi": {
+    "clientid": "702975277118-o7h43f9vo94b6ebdju9eua2uotje4lni.apps.googleusercontent.com",
+    "clientsecret": "_ymtemQmI6TLBZN_G9-N4TpL"
+  } 
 }
