--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\ManageRole\EditRole.cshtml" />
+    <Content Remove="Views\ManageUser\AddUserToRole.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -24,6 +29,24 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\IOC\IOC.csproj" />
     <ProjectReference Include="..\TranslatePersian\TranslatePersian.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ManageRole\EditRole.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\ManageRole\EditRole.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\ManageUser\AddUserToRole.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\ManageRole\EditRole.cshtml" />
+    <None Include="Views\ManageUser\AddUserToRole.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ManageUser\AddUserToRole.cshtml" />
   </ItemGroup>
 
 </Project>
